--- a/research.html
+++ b/research.html
@@ -150,12 +150,11 @@ As a research fellow at the University of Edinburgh, I shifted my focus from dia
 </p>
 
 <p>
-As a research scientist at USC's Institute for Creative Technologies, one of my research areas is the use of dialogue systems as <b>virtual role players</b> allowing learners to practice interpersonal skills through <b>menu-based</b> or <b>open-response</b> interaction. The ability of such role players to explain their behavior (<b>explainable artificial intelligence</b>) is crucial to allowing the intelligent tutoring system to diagnose learner mistakes in scenarios that may include randomness and pre-scripted challenges. One challenge in developing explainable artificial intelligence is that background knowledge is often implicit in the utterances of the virtual role players. This is especially true for tutoring cultural awareness and we built a prototype <b>computational model of culture</b> to make the cultural motives of virtual role players explicit. <b>experience manipulation</b> is another area in which the tutor and virtual role player work together to promote learning. In this case, the tutor influences the responses of the virtual role player (e.g., making the scenario easier or harder; generating indirect feedback).</p>
+As a research scientist at USC's Institute for Creative Technologies, one of my research areas is the use of dialogue systems as <b>virtual role players</b> allowing learners to practice interpersonal skills through <b>menu-based</b> or <b>open-response</b> interaction. The ability of such role players to explain their behavior (<b>explainable artificial intelligence</b>) is crucial to allowing the intelligent tutoring system to diagnose learner mistakes in scenarios that may include randomness and pre-scripted challenges. One challenge in developing explainable artificial intelligence is that background knowledge is often implicit in the utterances of the virtual role players. This is especially true for tutoring cultural awareness and we built a prototype <b>computational model of culture</b> to make the cultural motives of virtual role players explicit. <b>experience manipulation</b> is another area in which the tutor and virtual role player work together to promote learning. In this case, the tutor influences the responses of the virtual role player (e.g., making the scenario easier or harder; generating indirect feedback). In addition to virtual role players, I have worked with other types of simulations (e.g. flight and battlefield simulators) and explored <b>immersive technologies</b> ranging from mixed-reality experiences, VR headset-based interfaces and 3D visualizations. 
+</p>
 
 <p>
-Another focus area is immersive technologies ranging from mixed-reality experiences, VR headset-based interfaces and 3D simulations. 
- 
-</p>
+To create lessons and scenarios involving intelligent tutoring systems and virtual role players is an authoring challenge. 
 
 <ul>
 <li><b>lifelong learning</b> refers to technology such as artificial learning companions that is designed to support long-term learning across a variety of domains.</li>
