--- a/papers.html
+++ b/papers.html
@@ -59,7 +59,8 @@ The papers are organized by the location where the work was performed.
 	    <p>
         David Nelson, Russell Cohen Hoffing, Steven Thurman, Rhys Yahata, David Cobbins, Mark Core, Deniz Marti, 
 		Anthony DeCapite, Allison Aptaker, &amp; Rylan Pozniak Daniels. (2024).
-        Adaptive Interfaces for Better Decision Making.
+		<a href="https://www.xcdsystem.com/iitsec/proceedings/index.cfm?Year=2024&CID=1060&AbID=134008">
+			Adaptive Interfaces for Better Decision Making.</a>
 		In Proceedings of the Interservice/Industry Training Simulation and Education Conference (I/ITSEC).
 	 	</p>
 	</li>
@@ -83,8 +84,9 @@ The papers are organized by the location where the work was performed.
 	<li>
 		<p>
         Alesia Gainer, Allison Aptaker, Ron Artstein, David Cobbins, Mark Core, Carla Gordon, Anton Leuski,
-        Zongjian Li, Chirag Merchant, David Nelson, Mohammad Soleymani, &amp; David Traum. (2023). DIVIS: 
-        Digital Interactive Victim Intake Simulator. Extended abstract in Proceedings of the 23rd ACM 
+        Zongjian Li, Chirag Merchant, David Nelson, Mohammad Soleymani, &amp; David Traum. (2023). 
+	<a href="https://dl.acm.org/doi/10.1145/3570945.3607328">DIVIS: 
+		Digital Interactive Victim Intake Simulator.</a> Extended abstract in Proceedings of the 23rd ACM 
 		International Conference on Intelligent Virtual Agents (IVA '23).
         </p>
 	</li>
@@ -99,7 +101,8 @@ The papers are organized by the location where the work was performed.
 	<li>
 		<p>
 		Benjamin D. Nye, Aditya Jain, Dilan R. Ramirez, Mark G. Core, &amp; William Swartout. (2022).
-		Designing a Rapid Adaptive Content Registry (RACR) for Adaptive Learning.
+		<a href="https://www.xcdsystem.com/iitsec/proceedings/index.cfm?Year=2022&CID=944&AbID=112902">
+			Designing a Rapid Adaptive Content Registry (RACR) for Adaptive Learning.</a>
 		In Proceedings of the Interservice/Industry Training Simulation and Education Conference (I/ITSEC).
 		</p>
 	</li>
@@ -214,8 +217,7 @@ Design Recommendations for Intelligent Tutoring Systems: Volume 2 - Instructiona
 
 <li>
 <p>
-<a name="ICLS-2014">
-Andrew Gordon, Mark Core, Sin-Hwa Kang, Catherine Wang & Christopher Wienberg. (2014).</a>
+Andrew Gordon, Mark Core, Sin-Hwa Kang, Catherine Wang & Christopher Wienberg. (2014).
 <a href="https://people.ict.usc.edu/~gordon/publications/ICLS14.PDF">
 Civilian Analogs of Army Tasks: Supporting Pedagogical Storytelling Across Domains</a> (click to download from Gordon).
 Short paper (Report/Reflection) in Proceedings of the 
