--- a/research.html
+++ b/research.html
@@ -4,142 +4,13 @@
 <link rel="stylesheet" type="text/css"
       href="https://ict.usc.edu/~core/settings.css"/>
 <link rel="SHORTCUT ICON" href="https://ict.usc.edu/~core/favicon.ico"/>
-   <title>Mark's Research</title>
+<title>Mark's Research</title>
 </head>
 <BODY>
 
-<h2>Mark's ICT Projects</h2>
-<ul>
-<li><a href="projects.html#smart-e">SMART-E: Generalized Learning Analytics</a></li>
-<li><a href="projects.html#branching">INOTS and ELITE: interpersonal skills training</a></li>
-<li><a href="projects.html#engage">Engage: promoting learner engagement</a></li>
-<li><a href="https://ict.usc.edu/prototypes/personal-assistant-for-life-long-learning-pal3/">PAL3: Personal Assistant for Life Long Learning</a></li>
-<li><a href="projects.html#authoring">Sit Ped: authoring tutoring systems</a></li>
-<li><a href="projects.html#virtualPatients">SPS: easy-to-author virtual patients</a></li>
-<li><a href="projects.html#TACL">TACL: reflective writing as a method of learning</a></li>
-<li><a href="projects.html#VIGOR">VIGOR: tutoring in virtual worlds</a></li>
-<li><a href="projects.html#BILAT">BiLAT: bilateral negotiation and cultural awareness training</a></li>
-<li><a href="projects.html#IMPACT">IMPACT: experience manipulation</a></li>
-<li><a href="projects.html#CAB">CAB: culturally affected behavior modeling</a></li>
-<li><a href="projects.html#RTXAI">RTXAI: reflective tutoring and explainable artificial intelligence</a></li>
-</ul>
-<a href="index.html">Back to Home Page</a>
-
-<a name="smart-e">
-<h3>Generalized Learning Analytics</h3></a>
-
-<ul>
-	<li>Building reusable components
-for common tasks such as data cleaning and calculation of basic metrics based on common data
-such as 
-the <a href="https://www.adlnet.gov/research/performance-tracking-analysis/experience-api">DoD
-	xAPI standard</a>.</li> 
-A key area of reseach is interpreting generalized metrics
-(e.g., reaction time, correctness) based on archetypes. An archetype
-is a category of learner such as "struggling novice" or "disengaged"
-which may need additional support/motivation.
-</ul>
+<h2>Mark's Research</h2>
 
 
-<a name="branching">
-<h3>INOTS and ELITE: Branching conversations to support interpersonal skills training</h3></a>
-
-<table>
-<tr>
-<td>
-<p>
-Branching conversations consist of decision points. At each
-decision point, the virtual role player acts out a set of lines and
-the learner is presented with choices for how to
-respond. Each of those choices is connected to another decision point
-in the conversation until a conversation ending is reached.
-</p>
-
-<p>
-
-The <a href="https://ict.usc.edu/prototypes/INOTS"> INOTS</a> project
-used this framework in a classroom setting at the Navy's Officer
-Training Command. Learners can practice dealing with the personal and
-performance problems of virtual subordinates before taking command. In
-the classroom, one learner "talks" directly to the virtual role player
-while the rest of the class votes on the best option using electronic
-clickers. The intelligent tutoring system presents this data to the
-instructor via an "instructor control panel" (ICP). Performance of the
-class and individual learners can be visualized via a variety of
-charts and graphs. The ICP also allows the instructor to see the links
-between the choices offered and the instructional design (i.e., why a
-choice is correct, incorrect or
-mixed). <a href="https://ict.usc.edu/prototypes/ELITE">ELITE</a> is a
-version of the system customized for the Army.
-
-</p>
-
-
-</td>
-<td>
-<img src="images/ELITE-th.png">
-</td>
-</tr>
-</table>
-
-<p>
-<a href="https://ict.usc.edu/prototypes/MILES">
-MILES</a> is a version of the system created for USC's Center for
-Innovation and Research on Veterans and Military Families (CIR). In
-this case, the virtual human plays the role of a veteran, and
-learners practice their motivational interviewing skills.
-
-</p>
-
-<p>
-
-<a href="https://ict.usc.edu/prototypes/elite_lite">ELITE Lite</a> and 
-<a href="https://ict.usc.edu/prototypes/inots_counseling/">INOTS
-Counseling</a> are versions of ELITE and INOTS respectively that
-learners can run on their personal computers. An intelligent tutoring
-system provides hints and feedback during the simulated conversation,
-and the instructor control panel was replaced with a self-directed
-performance review. <a href="https://ict.usc.edu/prototypes/mind/">MIND is a
-personal-computer version of MILES</a> customized for use by the Veterans Affairs
-(VA) Puget Sound, and the University of Washington, Department of
-Psychology.
-</p>
-
-<p>
-ELITE Lite is a general platform for training interpersonal skills. In
-addition to interactive scenarios with virtual role players, the
-platform can deliver videos demonstrating good and bad approaches to
-addressing issues, and an instructional video with multiple choice
-questions designed to teach the target
-skills. <a href="https://ict.usc.edu/prototypes/stat/">STAT</a> is an
-example of using this platform for a different domain. In this case,
-users play the role of a school administer or psychologist conducting
-threat assessment interviews with a virtual student. ELITE Lite is
-also being used for Sexual Harassment/Assault Response &amp;
-Prevention (SHARP) training in the context
-of <a href="https://ict.usc.edu/prototypes/elite_sharp_ctt/">ELITE
-SHARP CTT</a>
-and <a href="https://ict.usc.edu/prototypes/elite_sharp_post/">ELITE
-SHARP POST</a>.
-
-<a name="engage">
-<h3>Engage: Empiricial research into promoting learner engagement in virtual learning environments</h3></a>
-
-<p>
-
-We know that generally, learner emotions can have short-term impacts
-(e.g., bored students seeking to speed through an exercise) as well as
-long-term impacts (e.g., general dislike for a subject). The Engage
-project uses the ELITE-Lite training system to explore the following
-topics in support of general guidelines for promoting learner
-engagement:
-
-<ul>
-<li>How learner traits impact their performance, and interact with changes to the tutoring system (e.g., increased help given).</li>
-<li>Learner moment-to-moment facial expressions as they interact with the system.</li>
-<li>Learner self-assessments of the learning experience after the fact.</li> 
-</ul>
-</p>
 
 <p>
 As a Ph.D. student at the University of Rochester, I focused on <b>dialogue parsing</b>, <b>natural language understanding</b> in the context of spoken dialogue. NOTE, I use the spelling "dialogue" here for consistency although you'll see "dialog parsing" in the papers. I extended traditional syntactic analysis to encompass overlapping speech and <b>speech repairs</b>, disruptions to spoken utterances such as self-corrections and filled pauses (e.g., um, uh). Another aspect of dialogue parsing is recognition of the intended actions (i.e., <b>dialogue acts</b>) associated with an utterance. I worked with the Discourse Resource Initiative in an effort to unify dialogue annotation schemes from different groups to facilitate collaborative efforts to build large, annotated corpora. James Allen and I wrote up the final annotation scheme, DAMSL (Dialog Act Markup in Several Layers), which has been used as a starting point for a number of dialogue annotation efforts. Although not the focus of my thesis, I also explored using dialogue act co-occurences as a tool for <b>discourse analysis</b> of the problem-solving dialogues in my test corpus.  
@@ -150,34 +21,25 @@ As a research fellow at the University of Edinburgh, I shifted my focus from dia
 </p>
 
 <p>
-As a research scientist at USC's Institute for Creative Technologies, one of my research areas is the use of dialogue systems as <b>virtual role players</b> allowing learners to practice interpersonal skills through <b>menu-based</b> or <b>open-response</b> interaction. The ability of such role players to explain their behavior (<b>explainable artificial intelligence</b>) is crucial to allowing the intelligent tutoring system to diagnose learner mistakes in scenarios that may include randomness and pre-scripted challenges. One challenge in developing explainable artificial intelligence is that background knowledge is often implicit in the utterances of the virtual role players. This is especially true for tutoring cultural awareness and we built a prototype <b>computational model of culture</b> to make the cultural motives of virtual role players explicit. <b>experience manipulation</b> is another area in which the tutor and virtual role player work together to promote learning. In this case, the tutor influences the responses of the virtual role player (e.g., making the scenario easier or harder; generating indirect feedback). In addition to virtual role players, I have worked with other types of simulations (e.g. flight and battlefield simulators) and explored <b>immersive technologies</b> ranging from mixed-reality experiences, VR headset-based interfaces and 3D visualizations. 
+As a research scientist at USC's Institute for Creative Technologies, one of my research areas is the use of dialogue systems as <b>virtual role players</b> allowing learners to practice interpersonal skills through <b>menu-based</b> or <b>open-response</b> interaction. The ability of such role players to explain their behavior (<b>explainable artificial intelligence</b>) is crucial to allowing the intelligent tutoring system to diagnose learner mistakes in scenarios that may include randomness and pre-scripted challenges. One challenge in developing explainable artificial intelligence is that background knowledge is often implicit in the utterances of the virtual role players. This is especially true for tutoring cultural awareness and we built a prototype <b>computational model of culture</b> to make the cultural motives of virtual role players explicit. <b>experience manipulation</b> is another area in which the tutor and virtual role player work together to promote learning. In this case, the tutor influences the responses of the virtual role player (e.g., making the scenario easier or harder; generating indirect feedback). In addition to virtual role players, I have worked with other types of simulations (e.g. flight and battlefield simulators) and explored <b>immersive technologies</b> ranging from mixed-reality experiences, 3D animations with audio and VR headset-based interfaces.
 </p>
 
 <p>
-To create lessons and scenarios involving intelligent tutoring systems and virtual role players is an authoring challenge. 
-
-<ul>
-<li><b>lifelong learning</b> refers to technology such as artificial learning companions that is designed to support long-term learning across a variety of domains.</li>
-
-<li><b>reflective tutors</b> are intelligent tutoring systems that support after action reviews 
-	in which learners review their interaction with a virtual role player or other simulated experience.</li>
-<li><b>authoring tools</b> allow teachers and subject matter experts to create intelligent 
-	tutoring systems and virtual role players without requiring experience in AI or 
-	programming.</li>
-<li><b>immersive technologies</b> include simulated 3D worlds and hardware such as VR headsets.</li>
-
-
-</ul>
+Another of my research areas is <b>lifelong learning</b>, technologies such as artificial learning companions that are designed to support long-term learning across a variety of domains. To enable lifelong learning, I have explored <b>authoring tools</b> that automatically create and check required meta-data as well as allowing teachers and domain experts to create new automated tutoring lessons through familiar tasks such as writing questions and rubrics, and providing hints. Another important aspect of lifelong learning is promoting <b>learner engagement</b> which requires tracking learner emotions through multi-modal analysis (e.g., <b>facial affect</b>), traditional <b>learning analytics</b> and machine learning techniques such as <b>semi-supervised learning</b>.
+</p>
 
 Notable fielded systems
 <ul>
 <li><b>BiLAT</b> is a training system that allows learners to participate in menu-based bilateral negotiation role-plays set in the
 	context of common Iraqi cultures (partner: U.S. Army's Games for Training program).</li>
-
 <li><a href="standardpatient.net">Standard Patient Studio</a> is a training system that allows medical students to practice
 	taking a medical history through open-response role-plays. It also includes an authoring
 	tool allowing doctors to create new scenarios for their students (partner: USC Keck School of Medicine).</li>
+<li><a href="https://ict.usc.edu/research/projects/inots-counseling/">INOTS</a> (partner: U.S. Navy) and <a href="https://ict.usc.edu/research/projects/elite-emergent-leader-immersive-training-environment/">ELITE</a> (partner: U.S. Army), allowed officiers-in-training to practice addressing the personal and performance problems of virtual subordinates in menu-based role-plays. INOTS was used at Officer Development School Newport in a mixed-reality environment. One trainee would interact with the virtual roleplayer in a simulated office while the rest of the class voted on the best option to take at each decision point. Later versions of INOTS and ELITE allow trainees to practice these roleplays on their own with intelligent tutoring system support.</li> 
+<li><b>MILES</b> (partner: USC's Center for Innovation and Research on Veterans and Military Families) and <b>MIND</b> (partner: VA Puget Sound and University of Washington) allowed students to practice their motivational interviewing skills with a virtual veteran in menu-based role-plays.</li>
+<li>Starting with <a href="https://ict.usc.edu/research/projects/elite-emergent-leader-immersive-training-environment/">ELITE</a> scenarios addressing different aspects of U.S. Army's SHARP (Sexual Harassment/Assault Response and Prevention) Program, we began a long-term collaboration with the Army's SHARP Academy leading to <b>DIVIS</b> (Digital Interactive Victim Intake System) which supports open-response virtual roleplaying.</li> 
+<li><a href="https://opentutor.info/home/">OpenTutor</a> is an open-source dialogue-based tutoring system initially developed with funding from the U.S. Army and now used in a variety of projects.</li>
+<li><a href="https://ict.usc.edu/research/projects/personal-assistant-for-life-long-learning-pal3/">PAL3</a>, the Personal Assistant for Life Long Learning</li>
 </ul>
-
 </BODY>
 </html>
