--- a/papers2.html
+++ b/papers2.html
@@ -7,6 +7,17 @@
    <title>Mark's Publications</title>
 </head>
 <BODY>
+
+<div id="sidebar">
+<div id="sidebarnav">
+<a href="index.html">Home</a>
+<a href="research.html">Research</a>
+<a class="active" href="publications2.html">Publications</a>
+<a href="CSCI544.html">Applied Natural Language Processing: Course Materials</a>
+</div>
+</div>
+
+<div id="contentarea">
 <ul>
 <li>
 <p> 
@@ -36,7 +47,7 @@ Mark G. Core, Benjamin Nye, Kayla Carr, Shirley Li, Aaron Shiel, Daniel Auerbach
 William Swartout. (2025).
 <a href="https://journals.flvc.org/FLAIRS/article/view/138996/144018">
 Usability and Preferences for a Personalized Adaptive Learning System for AI Upskilling.</a>
-In Proceedings of the 38th International Florida Artificial Intelligence Research Society Conference (FLAIRS). Keywords: <b>lifelong learning, teaching artificial intelligence</b>.
+In Proceedings of the 38th International Florida Artificial Intelligence Research Society Conference (FLAIRS). Keywords: <b>lifelong learning, teaching artificial intelligence, PAL3</b>.
 </p>
 </li>
 <li>
@@ -713,7 +724,7 @@ this is a longer version of the ACL-96 paper. Keywords: <b>natural language unde
 </li>
 
 </ul>
-
+</div>
 
 </BODY>
 </html>
