--- a/research.html
+++ b/research.html
@@ -8,9 +8,17 @@
 </head>
 <BODY>
 
-<h2>Mark's Research</h2>
+<div id="sidebar">
+<div id="sidebarnav">
+<a href="index.html">Home</a>
+<a class="active" href="research.html">Research</a>
+<a href="publications2.html">Publications</a>
+<a href="CSCI544.html">Applied Natural Language Processing: Course Materials</a>
+</div>
+</div>
 
-
+<div id="contentarea" style="width:600px;">
+<h1>Mark's Research</h1>
 
 <p>
 As a Ph.D. student at the University of Rochester, I focused on <b>dialogue parsing</b>, <b>natural language understanding</b> in the context of spoken dialogue. NOTE, I use the spelling "dialogue" here for consistency although you'll see "dialog parsing" in the papers. I extended traditional syntactic analysis to encompass overlapping speech and <b>speech repairs</b>, disruptions to spoken utterances such as self-corrections and filled pauses (e.g., um, uh). Another aspect of dialogue parsing is recognition of the intended actions (i.e., <b>dialogue acts</b>) associated with an utterance. I worked with the Discourse Resource Initiative in an effort to unify dialogue annotation schemes from different groups to facilitate collaborative efforts to build large, annotated corpora. James Allen and I wrote up the final annotation scheme, DAMSL (Dialog Act Markup in Several Layers), which has been used as a starting point for a number of dialogue annotation efforts. Although not the focus of my thesis, I also explored using dialogue act co-occurences as a tool for <b>discourse analysis</b> of the problem-solving dialogues in my test corpus.  
@@ -30,16 +38,17 @@ Another of my research areas is <b>lifelong learning</b>, technologies such as a
 
 Notable fielded systems
 <ul>
-<li><b>BiLAT</b> is a training system that allows learners to participate in menu-based bilateral negotiation role-plays set in the
-	context of common Iraqi cultures (partner: U.S. Army's Games for Training program).</li>
-<li><a href="standardpatient.net">Standard Patient Studio</a> is a training system that allows medical students to practice
-	taking a medical history through open-response role-plays. It also includes an authoring
-	tool allowing doctors to create new scenarios for their students (partner: USC Keck School of Medicine).</li>
+<li><b>BiLAT</b> (partner: U.S. Army's Games for Training program) is a training system that allows learners to participate in menu-based bilateral negotiation role-plays set in the context of common Iraqi cultures.</li>
+<li><a href="standardpatient.net">Standard Patient Studio</a> (partner: USC Keck School of Medicine) is a training system that allows medical students to practice taking a medical history through open-response role-plays. It also includes an authoring tool allowing doctors to create new scenarios for their students.</li>
 <li><a href="https://ict.usc.edu/research/projects/inots-counseling/">INOTS</a> (partner: U.S. Navy) and <a href="https://ict.usc.edu/research/projects/elite-emergent-leader-immersive-training-environment/">ELITE</a> (partner: U.S. Army), allowed officiers-in-training to practice addressing the personal and performance problems of virtual subordinates in menu-based role-plays. INOTS was used at Officer Development School Newport in a mixed-reality environment. One trainee would interact with the virtual roleplayer in a simulated office while the rest of the class voted on the best option to take at each decision point. Later versions of INOTS and ELITE allow trainees to practice these roleplays on their own with intelligent tutoring system support.</li> 
 <li><b>MILES</b> (partner: USC's Center for Innovation and Research on Veterans and Military Families) and <b>MIND</b> (partner: VA Puget Sound and University of Washington) allowed students to practice their motivational interviewing skills with a virtual veteran in menu-based role-plays.</li>
-<li>Starting with <a href="https://ict.usc.edu/research/projects/elite-emergent-leader-immersive-training-environment/">ELITE</a> scenarios addressing different aspects of U.S. Army's SHARP (Sexual Harassment/Assault Response and Prevention) Program, we began a long-term collaboration with the Army's SHARP Academy leading to <b>DIVIS</b> (Digital Interactive Victim Intake System) which supports open-response virtual roleplaying.</li> 
+<li><b>DIVIS</b> (partner: U.S Army's SHARP Academy) is the Digital Interactive Victim Intake System. Starting with <a href="https://ict.usc.edu/research/projects/elite-emergent-leader-immersive-training-environment/">ELITE</a> scenarios addressing different aspects of U.S. Army's SHARP (Sexual Harassment/Assault Response and Prevention) Program, we began a long-term collaboration with the Army's SHARP Academy leading to DIVIS which supports open-response virtual roleplaying.</li> 
 <li><a href="https://opentutor.info/home/">OpenTutor</a> is an open-source dialogue-based tutoring system initially developed with funding from the U.S. Army and now used in a variety of projects.</li>
-<li><a href="https://ict.usc.edu/research/projects/personal-assistant-for-life-long-learning-pal3/">PAL3</a>, the Personal Assistant for Life Long Learning</li>
+<li><a href="https://ict.usc.edu/research/projects/personal-assistant-for-life-long-learning-pal3/">PAL3</a>, the Personal Assistant for Life Long Learning, is a learning companion accessible through a mobile phone app or web browser which was initially developed with funding from the Office of Naval Research and now used in a variety of projects. To meet learner goals, PAL3 recommends lessons from a growing library of readings, videos and interactive resources in subjects such as electronics, leadership, suicide prevention and artificial intelligence.</li>
 </ul>
+<p>
+Copyright Mark G. Core. All rights reserved.
+</p>
+</div>
 </BODY>
 </html>
