--- a/index.html
+++ b/index.html
@@ -4,31 +4,82 @@
 <link rel="stylesheet" type="text/css"
       href="https://markcore.github.io/settings.css"/>
 <link rel="SHORTCUT ICON" href="https://markcore.github.io/favicon.ico"/>
-   <title>Mark G. Core</title>
+   <title>Mark Core</title>
 </head>
 <BODY>
-
-<div id="sidebar">
-<div id="sidebarnav">
-<a class="active" href="index.html">Home</a>
-<a href="research.html">Research</a>
-<a href="publications2.html">Publications</a>
-<a href="CSCI544.html">Applied Natural Language Processing: Course Materials</a>
-</div>
-</div>
-
-<div id="contentarea" style="width:600px;"> 
-<h1>Mark G. Core</h1>
-<h1>Research Scientist</h1>
+<table>
+<tr>
+<td>
 <img src="images/mark_head.JPG" height="120" width="96">
+</td>
+<td>
+<h3>Mark G. Core<br/>
+Research Scientist</h3>
+<a href="https://ict.usc.edu">
+USC Institute for Creative Technologies</a><br>
+12015 Waterfront Drive<br>
+Playa Vista, CA 90094 USA
+</td>
+ 
+</tr>
+</table>
 <p>
-I am currently a visiting researcher in the <a href="https://ict.usc.edu">Institute for Creative Technologies</a> at the University of Southern California having been a research scientist there from 2004 through 2025. Previously I was a research fellow in the
-<a href="informatics.ed.ac.uk/ilcc">Institute for Language, Cognition and Computation</a> at the University of Edinburgh and a Ph.D. student in the <a href="www.cs.rochester.edu">Computer Science department</a> of the University of Rochester.
-</p>  
+email: my-last-name &lt;AT>ict.usc.edu
+</p>
+
+<div id="contentarea" style="width:600px;">
 <p>
-email: my-first-name&lt;DOT>my-last-name&lt;AT>gmail.com
+My Ph.D. work at the University of Rochester focused on natural
+language understanding (NLU) in the context of dialogue, and included
+analysis of problem-solving dialogues using 
+<a href="http://www.cs.rochester.edu/research/cisd/resources/damsl/RevisedManual/RevisedManual.html">DAMSL</a>,
+Dialog Act Markup in Several Layers.
+See <a href="papers.html#dparsing">the Univ. of Rochester</a> section
+of my publications for more details. 
+
+At the University of Edinburgh, I continued my work on NLU and
+discourse analysis in the context of tutorial
+dialogue. See <a href="papers.html#tutoring">the Univ. of
+Edinburgh</a> section of my publications for more details.
+
+In 2004, I moved to USC's Institute for Creative Technologies
+where I have been working more generally in applied artificial
+intelligence. 
 </p>
 </div>
+
+<h3>Teaching</h3>
+<ul>
+<li><a href="CSCI544/cs544-spring2020">CSCI 544: Applied Natural Language Processing: Spring 2020</a>
+<ul>
+<li><a href="CSCI544/cs544-fall2016">Fall 2016</a></li>
+<li><a href="CSCI544/cs544-fall2015">Fall 2015</a></li>
+</ul>
+</li>
+<li>ITP 115: Programming in Python: Spring 2018</li>
+</ul>
+
+
+<a href="projects.html">
+<h3>ICT Projects</h3></a>
+<ul>
+<li><a href="projects.html#smart-e">SMART-E: generalized learning analytics</a></li>
+<li><a href="projects.html#branching">INOTS and ELITE: interpersonal skills training.</a></li>
+<li><a href="projects.html#engage">Engage: promoting learner engagement.</a></li>
+<li><a href="https://ict.usc.edu/prototypes/personal-assistant-for-life-long-learning-pal3/">PAL3: Personal Assistant for Life Long Learning.</a></li>
+<li><a href="projects.html#authoring">Sit Ped: authoring tutoring systems.</a></li>
+<li><a href="projects.html#virtualPatients">SPS: easy-to-author virtual patients.</a></li>
+<li><a href="projects.html#TACL">TACL: reflective writing as a method of learning.</a></li>
+<li><a href="projects.html#VIGOR">VIGOR: tutoring in virtual worlds.</a></li>
+<li><a href="projects.html#BILAT">BiLAT: bilateral negotiation and cultural awareness training.</a></li>
+<li><a href="projects.html#IMPACT">IMPACT: experience manipulation.</a></li>
+<li><a href="projects.html#CAB">CAB: culturally affected behavior modeling.</a></li>
+<li><a href="projects.html#RTXAI">RTXAI: reflective tutoring and explainable artificial intelligence.</a></li>
+</ul>
+
+<a href="papers.html">
+<h3>Publications</h3></a>
+
 
 </BODY>
 </html>
