--- a/index-new.html
+++ b/index-new.html
@@ -2,8 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css"
-      href="https://markcore.github.io/settings.css"/>
-<link rel="SHORTCUT ICON" href="https://markcore.github.io/favicon.ico"/>
+      href="settings-new.css"/>
    <title>Mark G. Core</title>
 </head>
 <BODY>
@@ -13,7 +12,7 @@
 <a class="active" href="index.html">Home</a>
 <a href="research.html">Research</a>
 <a href="publications2.html">Publications</a>
-<a href="CSCI544.html">Applied Natural Language Processing: Course Materials</a>
+<a href="CSCI544.html">USC Teaching</a>
 </div>
 </div>
 
@@ -22,7 +21,7 @@
 <h1>Research Scientist</h1>
 <img src="images/mark_head.JPG" height="120" width="96">
 <p>
-I am currently a visiting researcher at the University of Southern California's <a href="https://ict.usc.edu">Institute for Creative Technologies</a> having been a research scientist there from 2004 through 2025. Previously I was a research fellow at the University of Edinburgh's 
+I am a research scientist at the University of Southern California's <a href="https://ict.usc.edu">Institute for Creative Technologies</a>. Previously I was a research fellow at the University of Edinburgh's 
 <a href="informatics.ed.ac.uk/ilcc">Institute for Language, Cognition and Computation</a> and a Ph.D. student in the <a href="www.cs.rochester.edu">Computer Science department</a> of the University of Rochester.
 </p>  
 <p>
