--- a/CSCI544.html
+++ b/CSCI544.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css"
-      href="https://markcore.github.io/settings.css"/>
-<link rel="SHORTCUT ICON" href="https://markcore.github.io/favicon.ico"/>
-   <title>Applied Natural Language Processing: Course Materials</title>
+      href="settings-new.css"/>
+   <title>USC Teaching</title>
 </head>
 <BODY>
 
@@ -12,22 +11,22 @@
 <div id="sidebarnav">
 <a href="index.html">Home</a>
 <a href="research.html">Research</a>
-<a href="publications2.html">Publications</a>
-<a class="active" href="CSCI544.html">Applied Natural Language Processing: Course Materials</a>
+<a href="papers2.html">Publications</a>
+<a class="active" href="CSCI544.html">USC Teaching</a>
 </div>
 </div>
 
-<div id="contentarea" style="width:600px;">
+<div id="contentarea" style="width:800px;">
 
-<h1>Applied Natural Language Processing: Course Materials</h1>
-
-<p>
-I have taught in a variety of settings. The last course that I taught was CSCI544 at the University of Southern California: Applied Natural Language Processing. At that point, I had already moved my website to github; I include the links to the course materials below.</p>
+<h1>Courses taught at the University of Southern California</h1>
 
 <ul>
-<li><a href="CSCI544/cs544-spring2020">Spring 2020</a>
+<li><a href="CSCI544/cs544-spring2020">CSCI 544: Applied Natural Language Processing (Spring 2020)</a>
+<ul>
 <li><a href="CSCI544/cs544-fall2016">Fall 2016</a></li>
 <li><a href="CSCI544/cs544-fall2015">Fall 2015</a></li>
+</ul>
+<li>ITP 115: Programming in Python: Spring 2018</li>
 </ul>
 </div>
 
